--- a/octopus/src/main/resources/application.yml
+++ b/octopus/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       INDENT_OUTPUT: true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -33,3 +33,23 @@ jwt:
 
 job:
   poolSize: 1
+
+download:
+  delay: 5000 #5s
+  matchUrl: 'https://as.okooo.com/I/?method=mc.data.schedule.getOkoooSchedule&LotteryType=SportterySoccerMix&LotteryNo='
+
+# spring cron job format
+#1 2 3 4 5 6 Index
+#- - - - - -
+#* * * * * * command to be executed
+#- - - - - -
+#| | | | | |
+#| | | | | ------- Day of week (MON - SUN)
+#| | | | --------- Month (1 - 12)
+#| | | ----------- Day of month (1 - 31)
+#| |-------------- Hour (0 - 23)
+#| --------------- Minute (0 - 59)
+#----------------- Seconds (0 - 59)
+scheduled:
+  cron:
+    downloadMatch: '* */1 * * * *'
