--- a/octopus/src/main/resources/application.yml
+++ b/octopus/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       INDENT_OUTPUT: true
   jpa:
     hibernate:
-      ddl-auto: create-drop # change to `update` in production
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -33,10 +33,19 @@ jwt:
 
 job:
   poolSize: 1
+  minIntervalSeconds: 3
 
 download:
   matchDate: '2020-05-07'
-  delay: 5000 #5s
+  matchDelay: 0
+  oddsDelay: 3000 #3s
+  oddsChangeDelay: 3000
+
+  handicapDelay: 3000
+  handicapChangeDelay: 3000
+
+  overunderDelay: 3000 #3s
+  overunderChangeDelay: 3000 #3s
 
   matchUrl: 'https://as.okooo.com/I/?method=mc.data.schedule.getOkoooSchedule&LotteryType=SportterySoccerMix&LotteryNo=DATE_PLACEHOLDER'
 
