--- a/octopus-backend/pom.xml
+++ b/octopus-backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.alphago365</groupId>
     <artifactId>octopus</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>octopus</name>
     <description>Octopus server spring boot project</description>
 
