--- a/octopus-frontend/octopus-android/build.gradle
+++ b/octopus-frontend/octopus-android/build.gradle
@@ -3,8 +3,11 @@
 buildscript {
     
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/google'}
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin'}
         
     }
     dependencies {
@@ -18,9 +21,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
-        
+//        google()
+//        jcenter()
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/google'}
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven{ url 'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin'}
     }
 }
 
