--- a/octopus-backend/src/main/resources/application.yml
+++ b/octopus-backend/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     active: dev
 ---
 server:
-  port: 80
+  port: 8080
   servlet:
-    context-path: /api/v2
+    context-path: /
   error:
     include-stacktrace: never
 spring:
